[package]
name = "sexual_tiger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.29"
data-encoding = "2.4.0"
diesel = { version = "2.1.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15"
rand = "0.8.5"
reqwest = "0.11.13"
ring = "0.16.20"
rng = "0.1.0"
serde = "1.0.152"
serde_json = "1.0.91"
serenity = { version = "0.11.5", features = [
    "model",
    "collector",
    "client",
    "standard_framework",
    "voice",
] }
sha256 = "1.4.0"
songbird = { version = "0.3.1" }
tokio = { version = "1.23.0", features = ["rt-multi-thread"] }
youtube_dl = { version = "0.8.0", features = ["downloader"] }
